# prompt-matrix.py

./: .markdownlint.json  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: lint.yml  publish_pypi.yml
prompt_matrix/: __init__.py  prompt_matrix.py
tests/: test_expand.py
