[tool.poetry]
name = "prompt-matrix"
version = "0.1.3"
description = "Expand a prompt matrix strings into a list of prompts."
authors = ["Oliver Steele <steele@osteele.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/osteele/prompt-matrix"
homepage = "https://osteele.github.io/prompt-matrix/"
keywords = ["prompt-engineering"]
packages = [{include = "prompt_matrix"}]
include = [
    "LICENSE",
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Text Processing',
    'Topic :: Text Processing :: Filters',
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
ruff = "^0.0.254"
pytest-watch = "^4.2.0"
tox = "^4.4.6"

[tox]
isolated_build = true

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"
